--- a/Hhh/Hhh.tex
+++ b/Hhh/Hhh.tex
@@ -577,15 +577,15 @@ events, with at least one misidentified lepton, are estimated from control regio
 
 For signal extraction the mass of the \PHiggsps boson, \mA, is used. This mass is reconstructed by combining the
 four-vector of the \PZ boson candidate with the four-vector of the \PHiggslight candidate as obtained by using the 
-\texttt{SVFit} algorithm. The expected and observed 95\% \ac{CL} upper limits, for
+\texttt{SVFit} algorithm. The expected and observed upper limits at the 95\% \ac{CL}, for
 all $\ell\ell\tau\tau$ final states combined, is shown in figure \ref{fig:AZhUpperLimits}.
 
 \begin{figure}[h!]
 \begin{center}
 \includegraphics[width=0.5\textwidth]{Hhh/Plots/CMS-HIG-14-034_Figure_010-a.pdf}
-\caption[The 95\% confidence level expected and observed upper limits on the 
-\xsbr for the \AtoZhtolltautau process.]{The 95\% confidence level expected (dashed) and observed (solid)
-upper limits on the \xsbr for the \AtoZhtolltautau process.
+\caption[The expected and observed upper limits at the 95 \% CL on the 
+\xsbr for the \AtoZhtolltautau process.]{The expected (dashed) and observed (solid)
+upper limits at the 95\% \ac{CL} on the \xsbr for the \AtoZhtolltautau process.
 The green and yellow bands indicate the $\pm 1 \sigma $ and $\pm 2\sigma$
 expectations \cite{CMS-HIG-14-034}.}
 \label{fig:AZhUpperLimits}
@@ -690,7 +690,7 @@ Using this, $\text{CL}_s$ is defined as
 
 The value of $\mu$ for which $\text{CL}_s$ equals $\alpha$ is referred to as the upper limit on $\mu$ at
 \acf{CL} $1-\alpha$. Upper limits at the LHC are generally
-quoted at 95\% \ac{CL}. %, therefore the upper limit on cross-section times branching ratio
+quoted at the 95\% \ac{CL}. %, therefore the upper limit on cross-section times branching ratio
 %for the \Htohhtobbtautau process at this level is obtained as the value of $\mu$ for which $CL_s$ 
 %equals 0.05. The use of $CL_s$ to set
 The use of $\text{CL}_s$ to set exclusion limits is referred to as the modified frequentist approach\cite{CLS}.
@@ -749,7 +749,7 @@ this case \mH~is around $316\,\GeV$.}
 \end{figure}
 
 None of these distributions show hints of an excess of observed events above the background expectation. 
-The model-independent 95\% \ac{CL} expected and observed upper limits
+The model-independent expected and observed upper limits at the 95\% \ac{CL}
 on \xsbr are shown in 
 figure \ref{fig:hhh_results_modelindep}a, with figure \ref{fig:hhh_results_modelindep}b 
 showing the expected limit per channel. These figures include the contribution from the 
@@ -765,10 +765,10 @@ channel.
 \begin{center}
 \subfloat[]{\includegraphics[width=0.5\textwidth]{Hhh/Plots/CMS-HIG-14-034_Figure_008-d.pdf}}
 \subfloat[]{\includegraphics[width=0.5\textwidth]{Hhh/Plots/hhh_limit_comparison.pdf}}
-\caption[Expected and observed 95\% CL upper limits on 
-\xsbr for the \Htohhtobbtautau process.]{Expected and observed 95\% \ac{CL} upper limits on \xsbr  
+\caption[Expected and observed upper limits at the 95\% CL on 
+\xsbr for the \Htohhtobbtautau process.]{Expected and observed upper limits at the 95\% \ac{CL} on \xsbr  
 for the \Htohhtobbtautau process. In (a) the three final states of \etau, \mutau and \tautau are combined \cite{CMS-HIG-14-034}.
-(b) Shows the expected 95\% \ac{CL} upper limits on \xsbr for the \Htohhtobbtautau
+(b) Shows the expected upper limits at the 95\% \ac{CL} on \xsbr for the \Htohhtobbtautau
 process, separated by channel. The blue line shows the limit for the \tautau channel, the green line for the \mutau channel, the red line
 for the \etau channel and the black line the limit for all three channels combined. Up to around \mH~$= 320\,\GeV$ the \mutau channel is the most
 sensitive, with the \tautau channel being more sensitive at higher masses.}
@@ -806,7 +806,7 @@ particles, are defined by $\alpha$ and $\beta$, as in table \ref{tab:hhh_2HDM_co
 
 \begin{table}[htp]
 \begin{center}
-\caption{Couplings in the type-II 2HDM}
+\caption{Couplings in the type-II 2HDM.}
 \begin{tabular}{@{}ll@{}}
 \toprule
 \textbf{Decay} & \textbf{Coupling}\\
@@ -823,7 +823,7 @@ $\PHiggsps \rightarrow \PZ\PHiggslight$ & $\sim$ \cosba\\
 \end{table}
 
 The interpretations are made in the \cosba-\tanb~plane. Figure \ref{fig:HhhandAZh2HDMOverlaid}
-shows the observed and expected exclusion at 95\% \ac{CL} for the \Htohh
+shows the observed and expected exclusion at the 95\% \ac{CL} for the \Htohh
 and \AtoZh analyses, overlaid on the \xsbr.
 The exclusion contours have some interesting features, most of which can be explained by the couplings
 in table \ref{tab:hhh_2HDM_couplings}. When \cosba=0, in the alignment limit, the couplings
@@ -847,7 +847,7 @@ the analysis is not yet sensitive enough to actually observe it.
 interpreted in a type-II 2HDM, assuming $m_{\PHiggsps}=m_{\PHiggs}=m_{\PHiggs^+}=300\,\GeV$.]{Search for (a) \Htohhtobbtautau and (b) \AtoZhtolltautau interpreted in a type-II 
 \ac{2HDM}, assuming $m_{\PHiggsps}=m_{\PHiggs}=m_{\PHiggs^+}=300\,\GeV$. 
 The expected (dashed line)
-and observed (solid line) exclusion contours at 95\% \ac{CL} are overlaid
+and observed (solid line) exclusion contours at the 95\% \ac{CL} are overlaid
 on the \xsbr of the searched-for process.
 Regions of the \cosba-\tanb~plane where the 
 \xsbr is larger than the model-independent upper limit set for $m_{\PHiggs} = 300\,\GeV$ 
@@ -861,7 +861,7 @@ Regions of the \cosba-\tanb~plane where the
 %\includegraphics[width=0.85\textwidth]{Hhh/Plots/AZh2HDM.pdf}
 %\caption{Search for \AtoZhtolltautau interpreted in a type II 
 %2HDM, assuming $m_{H} = m_{A} = m_{H^{+}} = 300$ GeV. The expected (dashed line)
-%and observed (solid line) exclusion contours at 95\% confidence level are overlaid
+%and observed (solid line) exclusion contours at the 95\% confidence level are overlaid
 %on the cross--section of $gg\rightarrow \PHiggsps$ production
 %times the branching ratio of \PHiggsps into \Zhtolltautau.
 %Regions of the \cosba-\tanb plane where the cross--section times branching
@@ -892,7 +892,7 @@ at low \tanb, \mA$\neq$ \mH, and therefore \mH~is not in the studied range of $2
 everywhere in the \mA-\tanb~plane shown here.
 
 The \AtoZhtolltautau analysis on the other hand can exclude parts of the \mA-\tanb~region
-in this model. The expected and observed 95\% \ac{CL} exclusion contours are overlaid 
+in this model. The expected and observed exclusion contours at the 95\% \ac{CL} are overlaid 
 on the \xsbr for this process in the low-\tanb~MSSM scenario in  
 figure \ref{fig:HhhAndAZhlowtanb}b. The sharp drop in \xsbr, and therefore exclusion,
 near \mA~$ = 350\,\GeV$ arises from the fact that near this mass the decay $\PHiggsps \rightarrow \Ptop\APtop$ becomes
