--- a/MSSM/MSSM.tex
+++ b/MSSM/MSSM.tex
@@ -1472,7 +1472,7 @@ the reason for the doubly-peaking shape of the overlaid signal \cite{CMS-PAS-HIG
 \subfloat[No b-tag]{\includegraphics[width=0.5\textwidth]{MSSM/Figures/CMS-PAS-HIG-16-037_Figure_006-a.pdf}}
 \subfloat[B-tag]{\includegraphics[width=0.5\textwidth]{MSSM/Figures/CMS-PAS-HIG-16-037_Figure_006-b.pdf}}
 \end{center}
-\caption[Distributions of \mTtot~inthe no b-tag and b-tag 
+\caption[Distributions of \mTtot~in the no b-tag and b-tag 
 categories of the \etau channel.]{Distributions of \mTtot~in the (a) no b-tag and (b) b-tag categories 
 of the \etau channel. The signal of the three neutral Higgs bosons at \mA~=$1\,\TeV$
 and \tanb~$=50$ in the $m_{\PHiggslight}^{\text{mod+}}$ scenario is overlaid \cite{CMS-PAS-HIG-16-037}.}% Note that, to incorporate
@@ -1824,7 +1824,7 @@ and the conditions under which they were performed.
 
 \begin{table}[htp]
 \begin{center}
-\caption{Correlations between nuisance parameters in the 2015 and 2016 analysis}
+\caption{Correlations between nuisance parameters in the 2015 and 2016 analyses.}
 {\footnotesize
 \begin{tabular}{p{3cm}p{2cm}p{10cm}}
 \toprule
