--- a/MSSM/UncOv.tex
+++ b/MSSM/UncOv.tex
@@ -1,7 +1,7 @@
 \begin{table}[!h]
 \begin{center}
-\caption{\footnotesize Systematic uncertainties that affect the estimated number of signal
-or background events in the $\mu \tau_{h}$ channel.} 
+\caption[Systematic uncertainties that affect the estimated number of signal or background events in the \mutau channel]{\footnotesize Systematic uncertainties that affect the estimated number of signal
+or background events in the \mutau channel.} 
  {\tiny
  \begin{tabular}{p{2cm}|p{1cm}p{1cm}p{1cm}p{1cm}|p{1cm}p{1cm}p{1cm}p{1cm}|p{3cm}}
 \toprule
@@ -92,7 +92,7 @@ or background events in the $\mu \tau_{h}$ channel.}
 
 \begin{table}[!h]
 \begin{center}
-\caption{\footnotesize Systematic uncertainties that affect the estimated number of signal
+\caption[Systematic uncertainties that affect the estimated number of signal or background events in the \etau channel.]{\footnotesize Systematic uncertainties that affect the estimated number of signal
 or background events in the \etau channel.}
  {\tiny
  \begin{tabular}{p{2cm}|p{1cm}p{1cm}p{1cm}p{1cm}|p{1cm}p{1cm}p{1cm}p{1cm}|p{3cm}}
@@ -334,7 +334,7 @@ or background events in the \emu channel.}
 \begin{table}[!h]
 \begin{center}
 \caption{Systematic uncertainties that affect the estimated number of
-or background events in the $Z\rightarrow\mu\mu$ channel.}
+background events in the $\PZ\rightarrow\mu\mu$ channel.}
 {\scriptsize
 \begin{tabular}{l|cc|p{5cm}}
    \toprule
