--- a/Objects/Objects.tex
+++ b/Objects/Objects.tex
@@ -673,7 +673,7 @@ particles ($\pi^{\pm}, K^{\pm}$) and zero, one, or two neutral pions. An overvie
 of the most common decay modes is given in table \ref{tab:hadronic_tau_decays}.
 \begin{table}[htp]
 \begin{center}
-\caption{Summary of hadronic tau decay modes, indicating the branching fraction, and intermediate resonances where relevant \cite{pdg-2014}.}
+\caption[Summary of hadronic tau decay modes.]{Summary of hadronic tau decay modes, indicating the branching fraction, and intermediate resonances where relevant \cite{pdg-2014}.}
 \begin{tabular}{@{}lll@{}}
 %\toprule
 \textbf{Decay mode} & \textbf{Resonance} &\textbf{Branching fraction [\%]}\\
@@ -840,10 +840,10 @@ figures \ref{fig:tau_efficiency}b and \ref{fig:tau_efficiency}c, respectively.
 \subfloat[$\Pe\rightarrow$\Pgth fake rate for the anti-\Pe discriminator]{\includegraphics[width=0.5\textwidth]{./Objects/Plots/TauMisIDEle.pdf}}
 \end{center}
 \caption[Figures of the jet$\rightarrow$\Pgth fake rate in QCD MC events
-versus $\Pgt_{h}$ identification efficiency for \htotautau MC events, the real
-$\Pgt_{h}$ identification efficiecny for different working points of the anti-electron discriminator, and the $\Pe\rightarrow\Pgt_{h}$ fake rate for different
+versus $\Pgth$ identification efficiency for simulated $\PHiggs\rightarrow\Pgt\Pgt$ events, the real
+$\Pgth$ identification efficiency for different working points of the anti-electron discriminator, and the $\Pe\rightarrow\Pgt_{h}$ fake rate for different
 working points of the anti-electron discriminator.]{(a) The jet$\rightarrow$\Pgth fake rate in simulated QCD multijet events versus \Pgth identification
-efficiency for simulated \htotautau events, comparing the MVA-based isolation discriminator in red with the cut-based 
+efficiency for simulated $\PHiggs\rightarrow\Pgt\Pgt$ events, comparing the MVA-based isolation discriminator in red with the cut-based 
 isolation discriminator in pink. Tighter working points give lower hadronic tau identification
 efficiencies and lower fake rates, and for the same \Pgth identification efficiency the fake rate
 from the MVA-based discriminator is lower than from the cut-based discriminator. (b) The real \Pgth identification
