--- a/backmatter.tex
+++ b/backmatter.tex
@@ -70,7 +70,7 @@
 
 \appendix
 \renewcommand{\chaptername}{Appendix}
-\chapter{\texorpdfstring{Overview of systematic uncertainties in the MSSM \AHtotautau analysis}{Overview of systematic uncertainties in the MSSM A/H to tautau analysis}}
+\chapter{\texorpdfstring{Systematic uncertainties in the MSSM \AHtotautau analysis}{Overview of systematic uncertainties in the MSSM A/H to tautau analysis}}
 \label{appendix:uncerts}
 An overview of the systematic uncertainties that are applied in the MSSM \AHtotautau analysis (chapter \ref{chap:mssm})
 are summarised in this appendix. The uncertainties are given in
