--- a/frontmatter.tex
+++ b/frontmatter.tex
@@ -31,9 +31,9 @@ at $\sqrt{s}=13\,\TeV$. These are searches for neutral MSSM
 Higgs bosons in the mass range of \mbox{$90\,\GeV$--$3.2\,\TeV$} directly decaying
 into pairs of tau leptons. 
 No significant excess is observed in any of the searches. Upper limits at the 95\% confidence 
-level are set on the cross section times branching ratio for the production of Higgs bosons in the \ac{MSSM}.
+level are set on the cross section times branching ratio for the production of Higgs bosons in the MSSM.
 In addition, limits are set in the \mA-\tanb~parameter space of 
-several \ac{MSSM} benchmark scenarios, and in the \cosba-\tanb~parameter space of 
+several MSSM benchmark scenarios, and in the \cosba-\tanb~parameter space of 
 a two Higgs doublet model.
 
 \end{abstract}
@@ -81,8 +81,8 @@ not been made public, and draws on the results of \cite{CMS-PAS-HIG-16-037} and 
 %\end{preface}
 %% ToC
 \tableofcontents
-%\listoffigures
-%\listoftables
+\listoffigures
+\listoftables
 
 
 
