--- a/references.bib
+++ b/references.bib
@@ -1,12 +1,40 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Adinda de Wit at 2017-02-27 15:08:33 +0100 
+%% Created for Adinda de Wit at 2017-02-27 22:43:28 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{YR3,
+	Author = {{The LHC Higgs Cross Section Working Group}},
+	Date-Added = {2017-02-27 21:41:49 +0000},
+	Date-Modified = {2017-02-27 21:43:15 +0000},
+	Doi = {10.5170/CERN-2013-004},
+	Eprint = {1307.1347},
+	Keywords = {MSSM},
+	Title = {Handbook of LHC Higgs Cross Sections: 3. Higgs Properties}}
+
+@article{topptrwt,
+	Archiveprefix = {arXiv},
+	Author = {Khachatryan, Vardan and others},
+	Collaboration = {CMS},
+	Date-Added = {2017-02-27 14:31:16 +0000},
+	Date-Modified = {2017-02-27 14:33:41 +0000},
+	Doi = {10.1140/epjc/s10052-015-3709-x},
+	Eprint = {1505.04480},
+	Journal = {Eur. Phys. J.},
+	Keywords = {Objects},
+	Pages = {542},
+	Primaryclass = {hep-ex},
+	Reportnumber = {CMS-TOP-12-028, CERN-PH-EP-2015-117},
+	Slaccitation = {%%CITATION = ARXIV:1505.04480;%%},
+	Title = {{Measurement of the differential cross section for top quark pair production in pp collisions at $\sqrt{s} = 8\,\text {TeV} $}},
+	Volume = {C75},
+	Year = {2015},
+	Bdsk-Url-1 = {http://dx.doi.org/10.1140/epjc/s10052-015-3709-x}}
 
 @article{8TeVst,
 	Collaboration = {CMS},
@@ -918,9 +946,9 @@
 	Year = {2016}}
 
 @article{YR4,
-	Collaboration = {The LHC Higgs Cross Section Working Group},
+	Author = {{The LHC Higgs Cross Section Working Group}},
 	Date-Added = {2017-01-11 17:48:46 +0000},
-	Date-Modified = {2017-01-22 13:29:41 +0000},
+	Date-Modified = {2017-02-27 21:42:38 +0000},
 	Eprint = {1610.07922},
 	Keywords = {13TeV,MSSM,SM},
 	Title = {Handbook of LHC Higgs Cross Sections: 4. Deciphering the Nature of the Higgs Sector},
